<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Node Configuration"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/tv_low_power_support"
            android:text="@string/fragment_node_config_lpn"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_low_power_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/fragment_node_config_lpn_no_supported"
            android:textColor="@color/red_500"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_proxy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:padding="15dp"
            android:text="@string/fragment_node_config_proxy"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:theme="@style/ColorSwitchStyle" />


        <ImageButton
            android:id="@+id/btn_get_proxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:padding="15dp"
            android:src="@drawable/ic_refresh" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_relay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_relay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:enabled="false"
            android:text="@string/fragment_node_config_relay"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:theme="@style/ColorSwitchStyle" />


        <ImageButton
            android:id="@+id/btn_get_relay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:padding="15dp"
            android:src="@drawable/ic_refresh" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/fragment_node_config_friend"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:theme="@style/ColorSwitchStyle" />


        <ImageButton
            android:id="@+id/btn_get_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:padding="15dp"
            android:src="@drawable/ic_refresh" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_node_config_group"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_group"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_node_config_functionality"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_functionality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </LinearLayout>
</LinearLayout>