<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Node Details"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="@color/primary_color"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_node_name_info" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Node Name"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Unknown Device"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_unicast_address" />

        <LinearLayout
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unicast Address"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="0002"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_uuid" />

        <LinearLayout
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UUID"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="11"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_network_name" />

        <LinearLayout
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Network Name"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_network_key_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Demo network"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_key" />

        <LinearLayout
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Network Key"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_key" />

        <LinearLayout
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="App Key"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_key" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dev Key"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Model Table"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="@color/primary_color"
        android:textSize="20sp" />

    <TableLayout
        android:layout_marginHorizontal="10dp"
        android:id="@+id/table_models"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="3">

        <TableRow
            android:background="@color/primary_color"
            android:paddingVertical="5dp"
            tools:ignore="UselessParent">

            <TextView
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fragment_node_info_cell_element"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fragment_node_info_cell_vendor"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fragment_node_info_cell_id"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fragment_node_info_cell_description"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>